recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: not found: value snwoSide
		snwoSide(levels-1, length)
                ^Koch:22: error: not found: value snwoSide
		snwoSide(levels-1, length)
                ^Koch:24: error: not found: value snwoSide
		snwoSide(levels-1, length)
                ^Koch:26: error: not found: value snwoSide
		snwoSide(levels-1, length)
                ^